# mira

./: .clangd  .gitignore  .gitmodules  CLAUDE.md  Dockerfile  Makefile  README  README.md  TODO.md  bucket_controller.py  docker-compose.yml  huniors.md  juniors.md  launch_vision.sh  mira.py  mira.sh  pyproject.toml  rpi-patches.patch  video.xml
misc/: 96-david-webcam.rules  (+3 more)
src/camera_driver_uvc/: CMakeLists.txt  package.xml
src/camera_driver_uvc/launch/: list_devices.launch
src/camera_driver_uvc/src/: .main.cpp.swp  .main.h.swp  .util.h.swp  list_devices.cpp  main.cpp  main.h  stream.cpp  util.h
src/camera_fix_uvc/: CMakeLists.txt  Makefile  package.xml
src/camera_fix_uvc/src/: list_devices.cpp  main.cpp  stream.cpp
src/custom_msgs/: CMakeLists.txt  package.xml
src/custom_msgs/msg/: Telemetry.msg
src/dependencies/aruco_detector/: CMakeLists.txt  README.md  package.xml
src/dependencies/aruco_detector/include/mocap/: utils.hpp
src/dependencies/aruco_detector/src/: detector_node.cpp  utils.cpp
src/dependencies/camera_driver/: CMakeLists.txt  README.md  package.xml  setup.py
src/dependencies/camera_driver/camera_driver/: camera_driver_exe.py
src/dependencies/camera_driver/src/: camera_driver_node.cpp  device_finding.cpp  device_finding.hpp  pipeline_creation.cpp  pipeline_creation.hpp
src/dependencies/camera_driver/test/: CMakeLists.txt
src/dependencies/camera_driver_uvc/: CMakeLists.txt  camerainfo.py  package.xml
src/dependencies/camera_driver_uvc/include/camera_driver_uvc/: clog.hpp
src/dependencies/camera_driver_uvc/src/: list_devices.cpp  main.cpp  main.h  stream.cpp  util.h
src/dependencies/control_utils/: CMakeLists.txt  README.md  package.xml  setup.cfg
src/dependencies/control_utils/include/control_utils/: control_utils.hpp
src/dependencies/control_utils/scripts/: tuner.py
src/dependencies/control_utils/src/: pid_demo.cpp
src/dependencies/vision_boundingbox/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
src/dependencies/vision_boundingbox/launch/: detection.launch.py  docking_bb.launch.py  docking_bb_test.launch.py  vision_boundingbox_launch.py
src/dependencies/vision_boundingbox/models/yolo11n_openvino_model_int8/: metadata.yaml  yolo11n.xml
src/dependencies/vision_boundingbox/resource/: vision_boundingbox
src/dependencies/vision_boundingbox/scripts/: fake_detection.py  pipeline.py  publish_rtsp_stream.py
src/dependencies/vision_boundingbox/src/: app.hpp  helpers.cpp  main.cpp  yolo_v11.cpp
src/dependencies/vision_boundingbox/src/backends/openvino/: yolo_v11_openvino.cpp  yolo_v11_openvino.hpp
src/dependencies/vision_boundingbox/src/backends/tensorrt/: yolo_v11_tensorrt.cpp  yolo_v11_tensorrt.hpp
src/dependencies/vision_boundingbox/vision_boundingbox/: __init__.py  detection_node.py  yolo_detector.py
src/dependencies/vision_depth/: CMakeLists.txt  README.md  debug.py  package.xml
src/dependencies/vision_depth/launch/: query_device_info.launch
src/dependencies/vision_depth/models/depth-anything/: depth-anything_int8.xml
src/dependencies/vision_depth/src/: app.hpp  core.cpp  depth_anything.cpp  util.cpp
src/mira2_actions/: CMakeLists.txt  README.md  mira2_bt_models.xml  package.xml
src/mira2_actions/config/: bucket_task.xml  default.xml  docking.xml  test_detect_adarsh.xml  test_phase1.xml
src/mira2_actions/launch/: mira2_actions_launch.py  test_phase1_launch.py
src/mira2_actions/src/: common.hpp  main.cpp
src/mira2_actions/src/behaviours/: DetectObjectBoundingbox.cpp  DetectTargetPoint.cpp  behaviours.hpp
src/mira2_actions/src/motions/: AlignXY.cpp  Approach3DBBox.cpp  ApproachBoundingBox.cpp  ApproachWithDepth.cpp  GoToBoundingBox.cpp  HoldPosition.cpp  LateralEvasion.cpp  RotateToTargetHeading.cpp  YawSweep.cpp  YawToTargetHeading.cpp  motions.hpp
src/mira2_dashboard/: README.md  package.xml  setup.cfg  setup.py
src/mira2_dashboard/launch/: mira2_dashboard_launch.py
src/mira2_dashboard/mira2_dashboard/: connection_status.py  main.py  pwm_viz.py  ros_status.py  telemetry_viz.py
src/mira2_path_planning/: CMakeLists.txt  README.md  package.xml
src/mira2_path_planning/launch/: qauli.launch
src/mira2_path_planning/src/: gate_navigator.cpp
src/mira2_path_planning/src/docking/: dock_controller.py  docking_controller.cpp
src/mira2_perception/: CMakeLists.txt  README.md  bp_ros2_node.py  contour.py  package.xml  setup.cfg
src/mira2_perception/config/: camera_bottom.ini
src/mira2_perception/docking_perception_p2/: improved.py
src/mira2_perception/launch/: camera_1.launch  camera_1_b.launch  camera_2.launch  camera_auto.launch  camera_auto.launch.py  camera_bottom.launch  camera_bottom.launch.py  camera_front.launch  camera_front.launch.py  camera_imx335.launch  camera_zed.launch  david_webcam.launch
src/mira2_perception/mira2_perception/: contour.py  geometry.py  rect.py  rect_fix.py
src/mira2_perception/scripts/: aruco_tracker.py
src/mira2_perception/src/bucket/: blue_and_orange_ellipse.py  ellipse_updated.py  phase2_perception.py  phase2_perception_saksham.py
src/mira2_perception/src/docking/: calibration_data.json  improved.py
src/mira2_pid_control/: CMakeLists.txt  README.md  package.xml
src/mira2_pid_control/config/: gate_flare_imu_params.yaml  gate_flare_timed_params.yaml  video_submission.yaml
src/mira2_pid_control/launch/: aruco_tuner.launch.py  controller.launch  depth_tuning.launch  forward_tuner.launch.py  hardcode_flare.launch.py  lateral_tuner.launch.py  pid_tuner_gui.launch.py  video.launch  video.launch.py  yawtuner.launch
src/mira2_pid_control/scripts/: key_pub.py
src/mira2_pid_control/src/: bucket_p1.py  depth_tuner.cpp  flare_avoidance_timed.cpp  flare_imu.cpp  forward_tuner.cpp  go_down.cpp  lateral_tuner.cpp  video_submission_hardcode.cpp  video_submission_hardcode_xml.cpp  yaw_tuner.cpp
src/mira2_pid_control/src/resource/: check_class.py
src/mira2_rov/: CMakeLists.txt  README.md  package.xml
src/mira2_rov/include/mira2_rov/: joystick_utils.hpp
src/mira2_rov/launch/: teleop.launch
src/mira2_rov/src/: joystick_main.cpp
(+42 files in other folders)
