[project]
name = "mira"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "catkin-pkg>=1.0.0",
    "empy>=4.2",
    "lark-parser>=0.12.0",
    "numpy>=2.3.2",
    "pymavlink>=2.4.49",
    "pyqt6>=6.9.1",
    "pyqtgraph>=0.13.7",
    "pyserial>=3.5",
    "pyyaml>=6.0.2",
    "tk>=0.1.0",
]

[tools.pyright]
stubPath = "./misc/stubs"

[tool.mypy]
mypy_path = "./misc/stubs"
