[project]
name = "mira"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "catkin-pkg>=1.0.0",
    "empy>=4.2",
    "lark-parser>=0.12.0",
    "numpy>=2.3.2",
    "opencv-python>=4.11.0.86",
    "plotext>=5.3.2",
    "pymavlink>=2.4.49",
    "pyserial>=3.5",
    "pyyaml>=6.0.2",
    "textual>=8.0.0",
    "textual-plotext>=1.0.1",
    "tk>=0.1.0",
    "opencv-contrib-python",
]

[tools.pyright]
stubPath = "./misc/stubs"

[tool.mypy]
mypy_path = "./misc/stubs"
