<package format="3">
  <name>mira2_actions</name>
  <version>0.0.0</version>
  <description>Behavior Tree-based autonomous task execution for the Mira2 AUV. Provides composable motion and detection leaf nodes for gate, docking, and bucket competition tasks.</description>
  <maintainer email="davidnoronha@outlook.in">david</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <depend>behaviortree_cpp</depend>
  <depend>rclcpp</depend>
  <depend>ament_index_cpp</depend>
  <depend>control_utils</depend>
  <depend>custom_msgs</depend>
  <depend>vision_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
