<?xml version="1.0"?>
<package format="3">
  <name>mira2_path_planning</name>
  <version>0.0.0</version>
  <description>The mira2_path_planning package</description>

  <!-- Maintainer information -->
  <maintainer email="punlat@todo.todo">punlat</maintainer>

  <!-- License information -->
  <license>TODO</license>

  <!-- Dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>custom_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>mira2_pid_control</depend>
  <depend>rclcpp</depend>
  <depend>vision_msgs</depend>
  <depend>control_utils</depend>

  <!-- Export information -->
  <export>
    <!-- Additional information can be added here -->
  </export>
</package>
