<?xml version="1.0"?>
<package format="3">
  <name>mira2_path_planning</name>
  <version>0.0.0</version>
  <description>Autonomous navigation nodes for gate traversal, ArUco-guided docking, and bucket approach. Each node runs a closed-loop PID controller driven by perception data and vehicle telemetry.</description>

  <!-- Maintainer information -->
  <maintainer email="punlat@todo.todo">punlat</maintainer>

  <!-- License information -->
  <license>Apache-2.0</license>

  <!-- Dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>custom_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>vision_msgs</depend>
  <depend>control_utils</depend>

  <!-- Export information -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
