[develop]
script_dir=$base/lib/mira2_perception
[install]
install_scripts=$base/lib/mira2_perception
[build_scripts]
executable = /usr/bin/env python3

[options.entry_points]
console_scripts =
    phase2_perception = bucket.phase2_perception:main,
    phase2_perception_saksham = bucket.phase2_perception_saksham:main
