<?xml version="1.0"?>
<package format="3">
  <name>mira2_rov</name>
  <version>0.0.0</version>
  <description>Joystick teleoperation for the Mira2 AUV. Maps gamepad axes and buttons to custom_msgs/Commands PWM values for manual vehicle control.</description>

  <!-- Maintainer information -->
  <maintainer email="f3rt@todo.todo">f3rt</maintainer>

  <!-- License information -->
  <license>Apache-2.0</license>

  <!-- Dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>custom_msgs</depend>
  <depend>joy</depend>
  

  <!-- Export information -->
  <export>
    <build_type>ament_cmake</build_type>
    <!-- Additional information can be added here -->
  </export>
</package>
