<?xml version="1.0"?>
<package format="3">
  <name>aruco_detector</name>
  <version>0.0.0</version>
  <description>The auv_mocap package</description>

  <maintainer email="david@todo.todo">david</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>


  <build_depend>std_msgs</build_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>std_msgs</exec_depend>
  
 
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_export_depend>tf2</build_export_depend>
  <build_export_depend>tf2_ros</build_export_depend>
  <build_export_depend>tf2_geometry_msgs</build_export_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  
   <build_depend>eigen</build_depend>
    <build_export_depend>eigen</build_export_depend>
    <exec_depend>eigen</exec_depend>

  <build_depend>cv_bridge</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>vision_msgs</build_depend>
  
  <build_export_depend>cv_bridge</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>image_transport</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>vision_msgs</build_export_depend>

    <depend>custom_msgs</depend>
<!--   
  <member_of_group>rosidl_interface_packages</member_of_group>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>
<exec_depend>rosidl_default_runtime</exec_depend>
<member_of_group>rosidl_interface_packages</member_of_group> -->

  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>vision_msgs</exec_depend>

  <export>
        <build_type>ament_cmake</build_type>
  </export>
</package>
