<?xml version="1.0"?>
<package format="3">
	<!-- PACKAGE NAME -->
    <name>camera_driver_uvc</name>
    <version>0.1.0</version>
    <description>Package for reading camera data using UVC (USB Video Class).</description>
    <maintainer email="your.email@example.com">Your Name</maintainer>
    <license>MIT</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

	<!-- ROS PACKAGE DEPENDENCIES -->
    <depend>rclcpp</depend>
    <depend>sensor_msgs</depend>
    <depend>image_transport</depend>
    <depend>libusb-dev</depend>
    <depend>camera_info_manager</depend>
    <depend>libuvc-dev</depend>

    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
